--- a/app/globals.css
+++ b/app/globals.css
@@ -161,10 +161,10 @@ body {
 /* Login & Register */
 
 .wrapper {
+  min-height: 85vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
 
   font-weight: 700;
 }
